Make it easier to test with different config files

--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
     "scripts": {
         "clear": "rm -rf config/soap-client.php src",
         "test": "./vendor/bin/phpunit -c phpunit.xml",
-        "generate-advanced": [
+        "generate": [
             "@clear",
-            "soap-client generate:types --config='config/advanced-soap-client.php'",
-            "soap-client generate:classmap --config='config/advanced-soap-client.php'",
-            "soap-client generate:client --config='config/advanced-soap-client.php'",
-            "soap-client generate:clientfactory --config='config/advanced-soap-client.php'"
+            "soap-client generate:types",
+            "soap-client generate:classmap",
+            "soap-client generate:client",
+            "soap-client generate:clientfactory"
         ]
     }
 }
